# 3DVR

./: CMakeLists.txt  README.md
Src/: Application.cpp  Application.h  Main.cpp
Src/Debug/: glad.c
Src/Geometry/: Model.cpp  Model.h  ModelManager.cpp  ModelManager.h
Src/Graphics/: Renderer.h  Shader.cpp  Shader.h
Src/Graphics/Shaders/: ControllerFS.txt  ControllerVS.txt  LineFS.txt  LineGS.txt  LineVS.txt  ModelFS.txt  ModelVS.txt  PointGS.txt  RenderModelFS.txt  RenderModelVS.txt  WindowFS.txt  WindowVS.txt
Src/Maths/: Math.h
Src/System/: InputHandler.cpp  InputHandler.h  VRhandler.cpp  VRhandler.h
cmake/: FindOpenVR.cmake
